# trainyard-rust

./: .trainyard_saved_progress.json  Cargo.toml  README.md
assets/: atlas.xcf  levels.txt
src/: color.rs  connection.rs  edge.rs  gameplay.rs  gui.rs  levels.rs  main.rs  particle.rs  sprites.rs  tile.rs  utils.rs  yard.rs
src/gui/: button.rs  list.rs
src/particle/: drawn_arrow.rs  fire.rs  painter_particle.rs  shrinking_circle.rs  shrinking_plus.rs  smoke.rs  sparkle.rs  splitter_particle.rs
src/tile/: painter.rs  rock.rs  splitter.rs  tracktile.rs  trainsink.rs  trainsource.rs
